Fix table scrolling and adjust spacing with classes

--- a/css/main.css
+++ b/css/main.css
@@ -20,4 +20,5 @@ ol {
 
 table {
   border-collapse: collapse;
+  width: 45rem;
 }
